--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 kotlin = "2.0.0"
 ktor = "2.3.12"
+koin = "3.6.0-wasm-alpha2"
 tg_bot = "6.2.0"
 ksp_version = "2.0.0-1.0.22"
 
@@ -14,6 +15,9 @@ ktor-client-logging = { module = "io.ktor:ktor-client-logging", version.ref = "k
 
 #ktor common
 ktor-serialization-kotlinx-json = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor" }
+
+#koin
+koin-core = { module = "io.insert-koin:koin-core", version.ref = "koin" }
 
 #telegram-bot
 eu-vendeli-telegramBot = { module = "eu.vendeli:telegram-bot", version.ref = "tg_bot" }
